# python-clitools

./: .bandit.yaml  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .travis.yml  MANIFEST.in  README.rst  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: semgrep.yml  tests.yml
clitools/: __init__.py  autocropscans.py  detectencoding.py  digssh.py  fs_lint.py  gitlab_shared_runners.py  id3v1toid3v2.py  note.py  onlinepingcheck.py  rdiff_backup_wrapper.py  rndpasswd.py  rot13.py  tomp3.py  transliterate.py
clitools/tests/: __init__.py  test_fslint.py  test_rndpasswd.py  test_tomp3.py
clitools/tests/resources/: test-fs.tgz
