[metadata]
long_description = file: README.rst

[flake8]
max_line_length = 120
ignore = W504
exclude = .git,__pycache__,.tox,dist,build,.eggs,.direnv
# ignore assert warnings in test files:
per-file-ignores =
    clitools/tests/*.py:S101

# https://docs.pytest.org/en/latest/goodpractices.html#integrating-with-setuptools-python-setup-py-test-pytest-runner
[aliases]
test=pytest

[coverage:run]
omit = clitools/tests/*

[check-manifest]
# https://pypi.python.org/pypi/check-manifest
ignore =
    .coveragerc
    .pre-commit-config.yaml
    .pylintrc
    .github
    .renovaterc.json
    tox.ini
    requirements-dev.txt
