[metadata]
name = clitools
version = 0.2.1
url = https://github.com/infothrill/python-clitools
author = Paul Kremer
description = Collection of CLI tools written in Python
license = MIT
classifiers =
    DO NOT UPLOAD
    Topic :: Utilities
    Programming Language :: Python :: 3.7
long_description = file: README.rst

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    pytest-runner
    setuptools>=12
install_requires =
    click >= 6.7
    chardet >= 2.1
    colorama
    IPy >= 0.83
    unidecode >= 0.04
    mutagen >= 1.39
    phx-class-registry >= 5.0
    pathspec>=0.5.9
    six
    python-gitlab
    python-slugify>=3.0.3
    pyfzf>=0.3.1
tests_require = pytest>=3.0.7
data_files =


[options.entry_points]
console_scripts =
    detectencoding = clitools.detectencoding:main
    digssh = clitools.digssh:main
    fs-lint = clitools.fs_lint:fs_lint
    gitlab-shared-runners = clitools.gitlab_shared_runners:main
    id3v1toid3v2 = clitools.id3v1toid3v2:main
    autocropscans = clitools.autocropscans:main
    note = clitools.note:main
    onlinepingcheck = clitools.onlinepingcheck:main
    rdiff-backup-wrapper = clitools.rdiff_backup_wrapper:main
    rndpasswd = clitools.rndpasswd:main
    rot13 = clitools.rot13:main
    transliterate = clitools.transliterate:main
    tomp3 = clitools.tomp3:main

[options.package_data]
clitools/tests/resources =
    clitools/tests/resources/*.ini

[flake8]
max_line_length = 120
ignore = W504
exclude = .git,__pycache__,.tox,dist,build,.eggs,.direnv
per-file-ignores =
    clitools/tests/*.py:S101,E501

[aliases]
test = pytest

[coverage:run]
omit = clitools/tests/*

[check-manifest]
ignore =
    .coveragerc
    .pre-commit-config.yaml
    .pylintrc
    .github
    .renovaterc.json
    tox.ini
    requirements-dev.txt
